fix: small screen overflow

--- a/frontend/src/styles/Home.css
+++ b/frontend/src/styles/Home.css
@@ -326,6 +326,14 @@
 }
 
 @media screen and (max-width:768px) {
+    .landing_sections_wrapper {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 100px;
+        padding-inline: 24px;
+    }
+
     .landing_locations_header {
         flex-direction: column;
         align-items: flex-start;
@@ -337,13 +345,11 @@
     }
 
     .landing_scroll_indicator {
-        display: flex
+        display: flex;
     }
 
     .landing_locations_container {
         display: flex;
-        flex-wrap: nowrap;
-        width: 100%;
         overflow: scroll;
         scroll-snap-type: x mandatory;
         -ms-overflow-style: none;
